[metadata]
name = stringparser
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
version = 0.6.dev0
description = Easy to use pattern matching and information extraction
long_description = file: README.rst
keywords = string, parsing, PEP3101, regex
url = http://github.com/hgrecco/stringparser
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Libraries
    Topic :: Text Processing
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
py_modules = stringparser
zip_safe = True
python_requires = >=3.5
setup_requires = setuptools

[options.extras_require]
test =
    pytest
    pytest-cov

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[isort]
default_section=THIRDPARTY
known_first_party=pint
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[zest.releaser]
create-wheel = yes
